style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Custom properties, edit later */

:root {
    --ff-primary: "Noto Sans", sans-serif;
    --ff-secondary: "Noto Sans Mono", monospace;

    --fw-reg: 300;
    --fw-bold: 900;
    
    --clr-light: #e7e7e7;
    --clr-dark: #141414;
    --clr-accent: #920303;

    --fs-h1: 3rem;
    --fs-h2: 2.25rem;
    --fs-h3: 1.25rem;
    --fs-body: 1rem;

    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25), 0.125em 0.125em 0.25em rgba(0,0,0,.125);
}

@media (min-width: 600px) {
    :root {
        --fs-h1: 4.5rem;
        --fw-h2: 3.75rem;
        --fw-h3: 1.5rem;
        --fs-body: 1.125rem;
    }
}

/* General Styles */

html {
    scroll-behavior: smooth;
}


body {
    background-color: var(--clr-light);
    color: var(--clr-dark);
    margin: 0;
    font-family: var(--ff-primary);
    font-size: var(--fs-body);
    line-height: 1.6;
}

header {
    padding: 0em 3em;
}

section {
    padding: 5em 7em;
}

img {
    display: block;
    max-width: 100%;
}

strong { font-weight: var(--fw-bold);}

:focus {
    outline: 3px solid var(--clr-accent);
    outline-offset: 3px;
}

.btn {
    display: inline-block;
    padding: .5em 2.5em;
    background: var(--clr-accent);
    color: var(--clr-dark);
    text-decoration: none;
    cursor: pointer;
    font-size: .8rem;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: var(--fw-bold);
    transition: transform 200ms ease-in-out;
}

/* Typography */

h1,
h2,
h3 {
    line-height: 1.1;
    margin: 0;
}

h1 { font-size: var(--fs-h1) }
h2 { font-size: var(--fs-h2) }
h3 { font-size: var(--fs-h3) }

.section__title {
    margin-bottom: .25em;
}

.section__title--intro {
    font-weight: var(--fw-reg);
}

.section__title--intro strong {
    display: block;
}

.section__subtitle {
    margin: 0;
    font-size: var(--fs-h3);
}

.section__subtitle--intro,
.section__subtitle--about {
    background: var(--clr-accent);
    font-family: var(--ff-secondary);
    margin-bottom: 1em;
}

/* Header */

header {
    display: flex;
    justify-content: space-between;
    padding: 1em;
}

.logo {
    max-width: 100px;
}

.nav {
    position: fixed;
    background: var(--clr-dark);
    color: var(--clr-light);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 100;

    transform: translateX(100%);
    transition: transform 250ms cubic-bezier(.5,0,.5,1);
}

.nav__list {
    list-style: none;
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    margin: 0;
    padding: 0;
}

.nav__link{
    color: inherit;
    font-weight: var(--fw-bold);
    font-size: var(--fs-h3);
    text-decoration: none;
}

.nav__link:hover {
    color: var(--clr-accent)
}

.nav-toggle {
    padding: .5em;
    background: transparent;
    border: 0;
    cursor: pointer;
    position: absolute;
    right: 1em;
    top: 1em;
    z-index: 1000;
}


.nav-open .nav{
    transform: translateX(0);
}

.nav-open .nav-toggle {
    position: fixed;
}

.nav-open .hamburger {
    transform: rotate(.625turn);
}

.nav-open .hamburger::after {
    opacity: 0;
}

.nav-open .hamburger::before {
    transform: rotate(90deg) translateX(-6px);
}

.hamburger {

    display: block;
    position: relative;
}

.hamburger,
.hamburger::before,
.hamburger::after {
    background: var(--clr-accent);
    width: 2em;
    height: 3px;
    border-radius: 1em;
    transition: transform 250ms ease-in-out;
}

.hamburger::before,
.hamburger::after {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
}

.hamburger::before { 
    top: 6px; 
}

.hamburger::after { 
    bottom: 6px; 
}

/* Intro section */

.intro {
    position: relative;
}

.intro__img {
    box-shadow: var(--bs);
}

.section__subtitle--intro {
    display: inline-block;
}

@media (min-width: 900px) {
    .intro {
        display: grid;
        width: min-content;
        margin: 0 auto;
        column-gap: 1em;
        grid-template-areas: 
            "img title"
            "img subtitle";
        grid-template-columns: min-content max-content;
    }

    .intro__img {
        grid-area: img;
        min-width: 250px;
    }

    .section__subtitle--intro {
        align-self: start;
        grid-column: -.5 / 1;
        text-align: right;
        position: relative;
    }
}


/* About Me Section */

.about-me {
    max-width: 1500px;
    margin: 0 auto;
}

.about-me__img {
    box-shadow: var(--bs);
}

@media (min-width: 800px) {
    .about-me {
        display: grid;
        grid-template-columns: 1fr 200px;
        grid-template-areas: 
        "title img"
        "subtitle img"
        "text img";
        column-gap: 2em;
    }

    .section__title--about {
        grid-area: title;
    }


    .about-me__img {
        grid-area: img;
    }
}

/* Portfolio Section */

.my-work {
    background-color: var(--clr-dark);
    color: var(--clr-light);
    text-align: center;
}

.section__subtitle--work {
    color: var(--clr-accent);
    font-weight: var(--fw-bold);
    margin-bottom: 2em;
}

.portfolio {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    gap: 20px;
}

.portfolio__item {
    background: var(--clr-accent);
    overflow: hidden;
}

.portfolio__img {
    transition: 
        transform 300ms cubic-bezier(.5, 0, .5, 1),
        opacity 250ms linear;
}

.portfolio__description {
    color: var(--clr-light);
    font-size: var(--fs-h3);
    padding: 10px;
    text-align: center;
    font-size: 1rem;
}

.portfolio__img:hover, 
.portfolio__item:focus .portfolio__img {
    transform: scale(1.1);
    opacity: .75;
}

/* Footer */

.footer {
    background: #000000;
    color: var(--clr-accent);
    text-align: center;
    padding: 2.5em 0;
    font-size: var(--fs-h2);
}

.footer a {
    color: inherit;
    text-decoration: none;
}

.footer__link {
    font-size: var(--fs-h3);
    font-weight: var(--fw-bold);
;
}

.footer__link:hover,
.social-list__link:hover {
    opacity: .7;
}

.footer__link:hover {
    text-decoration: underline;
}

.social-list {
    list-style: none;
    display: flex;
    justify-content: center;
    margin: 0 0;
}

.social-list__item {
    margin: 0 .5em;
}

.social-list__link {
    padding: .5em;
}

